src/styles/themes.less
// Any changes needed for specific bootswatch themes should be put in here

.cyborg {
  .text-light {
    color: whitesmoke !important;
  }

  img[src="assets/images/pokeball/None.svg"] {
    filter: invert(1) brightness(90%);
  }
}

.darkly {
  .text-primary, .text-light {
    color: whitesmoke !important;
  }

  img[src="assets/images/pokeball/None.svg"] {
    filter: invert(1) brightness(90%);
  }
}

.sketchy {
  // Fix double close button
  #toaster .toast-body, .text-light {
    .close, .close:hover {
      color: transparent;
    }

    .close:before,
    .close:hover:before,
    .close:focus:before,
    .close:active:before {
      color: whitesmoke;
    }
  }

  #toaster .toast-header {
    .close, .close:hover {
      color: transparent;
    }

    .close:before,
    .close:hover:before,
    .close:focus:before,
    .close:active:before {
      color: #333;
    }
  }

  .modal-header {
    border-radius: 0px;
  }
}

.slate {
  #toaster, #achievementsModal {
    .text-primary {
      color: whitesmoke !important;
    }
  }

  img[src="assets/images/pokeball/None.svg"] {
    filter: invert(1) brightness(90%);
  }
}

.solar {
  .seed-list-item.active {
    background: rgba(255, 255, 255, 0.2);
  }
}

.superhero {
  .text-light {
    color: whitesmoke !important;
  }

  img[src="assets/images/pokeball/None.svg"] {
    filter: invert(1) brightness(90%);
  }
}

